--- a/.ebextensions/default.config
+++ b/.ebextensions/default.config
@@ -3,3 +3,5 @@ option_settings:
         DJANGO_SETTINGS_MODULR: final_project.settings
     aws:elasticbeanstalk:container:python:
         WSGIPath: final_project/wsgi.py
+    aws:elasticbeanstalk:container:python:staticfiles:
+        /static/: staticfiles/
